# cuepoint

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  config.toml  config.toml.example  create_shortcut.ps1  cuepoint.bat  docker-compose.yml  following.txt.example  launch_gui.bat  launch_gui.pyw  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-11-feedback-loop.md  2026-06-12-glass-redesign.md
docs/superpowers/specs/: 2026-06-11-feedback-loop-design.md  2026-06-12-glass-redesign-design.md
external_libs/resident-advisor-events-scraper-main/: graphql_query_template.json  graphql_query_template_id.json
lib/parser/: api.py  bandcamp.py  club_scrapers.py  config.py  db.py  discogs.py  discovery.py  enrichment.py  event_fetcher.py  fetch_following.py  following.py  gui.py  html_creator.py  sc.py  scoring.py
lib/parser/tests/: conftest.py  test_api.py  test_artist_tags.py  test_bandcamp.py  test_club_scrapers.py  test_config.py  test_db.py  test_discogs.py  test_enrichment.py  test_filter.py  test_following.py  test_fuzzy_match.py  test_html_functions.py  test_http_utils.py  test_integration.py  test_parse_events.py  test_sc.py  test_scoring.py
scripts/: smoke_glass_report.py
src/cuepoint/: api.py  bandcamp.py  club_scrapers.py  config.py  db.py  discogs.py  discovery.py  enrichment.py  event_fetcher.py  fetch_following.py  flyers.py  following.py  fuzzy_match.py  generic.py  gui.py  html_creator.py  http_utils.py  learning.py  payloads.py  sc.py  scoring.py  stats.py  tag_utils.py  types.py
src/cuepoint/templates/: report.html
src/techno_scan/: api.py  bandcamp.py  config.py  db.py  discogs.py  discovery.py  enrichment.py  event_fetcher.py  fetch_following.py  flyers.py  following.py  fuzzy_match.py  generic.py  gui.py  html_creator.py  http_utils.py  payloads.py  sc.py  scoring.py  stats.py
tests/: conftest.py  test_api.py  test_api_errors.py  test_api_feedback.py  test_artist_tags.py  test_bandcamp.py  test_cli_learning.py  test_club_scrapers.py  test_concurrency.py  test_config.py  test_config_learning.py  test_config_validation.py  test_db.py  test_db_coverage.py  test_db_extended.py  test_db_feedback.py  test_discogs.py  test_discogs_extended.py  test_discovery.py  test_enrichment.py  test_event_fetcher.py  test_event_fetcher_extended.py  test_fetch_following.py  test_filter.py  test_flyers.py  test_following.py  test_following_extended.py  test_fuzzy_match.py  test_glass_template.py  test_html_feedback.py  test_html_functions.py  test_http_utils.py  test_http_utils_async.py  test_integration.py  test_lazy_init.py  test_learning.py  test_parse_events.py  test_payloads.py  test_pipeline_e2e.py  test_retry_thresholds.py  (+10 more)
