[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuepoint"
version = "1.0.0"
description = "Electronic music event scanner — fetches RA.co events, enriches artists via SoundCloud/Discogs/Bandcamp, filters and ranks by genre."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chardet>=5.1.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "python-dateutil>=2.8.2",
    "requests>=2.32.5",
    "wakepy>=0.10.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-beautifulsoup4>=4.12",
]
gui = [
    "customtkinter>=5.2.0",
    "tkcalendar>=1.6.1",
    "pyperclip>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil",
    "ignore::DeprecationWarning:pytz",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top (gui.py needs env setup before tkinter)
    "B010",   # do not call setattr with a constant attribute value
    "SIM102", # nested if → combined if (reduces readability in some cases)
    "SIM103", # return condition directly (less readable with complex expressions)
    "SIM105", # contextlib.suppress (try/except/pass is clearer for small blocks)
    "SIM108", # use ternary operator (reduces readability in some cases)
    "SIM110", # use any() (for loop with early return is clearer)
    "RUF001", # ambiguous unicode — en-dashes are intentional
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "UP047",  # TypeVar → PEP 695 syntax (keep compat with mypy)
]

[tool.ruff.lint.isort]
known-first-party = ["cuepoint"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "customtkinter", "customtkinter.*", "tkcalendar", "tkcalendar.*", "wakepy", "wakepy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cuepoint.gui"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false

[tool.coverage.run]
source = ["src/cuepoint"]
omit = ["src/cuepoint/gui.py"]

[tool.coverage.report]
show_missing = true
fail_under = 55
